@@ -14,7 +14,6 @@
  */
 //=============================================================================
 
-
 #include "test_config.h"
 #include "ace/OS_NS_stdio.h"
 #include "ace/OS_NS_string.h"
